# nearlab_msgs

./: CMakeLists.txt  package.xml
msg/: ControlStamped.msg  FlowWithCovarianceStamped.msg  ImuWithCovarianceStamped.msg  LidarRawWithCovarianceStamped.msg  StateStamped.msg
srv/: attitude_traj.srv  energy_optimal_traj.srv
